infra/kubernetes/cluster-01/apps/monitoring/grafana/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: grafana
  namespace: monitoring
  labels:
    app: grafana
spec:
  selector:
    app: grafana
  ports:
    - name: grafana-web
      protocol: TCP
      port: 80
      targetPort: web
